...
            showNextQuestionOrResults()
        }
    }
    
    private func prepareRoundResult(with result: QuizResultsViewModel) {
        let endRoundAlert = AlertModel(
            identifier: "Game results",
            title: result.title,
            message: result.text,
            buttonText: result.buttonText
        ) { [weak self] in
            guard let self else { return }
            self.reset()
...
